--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <title>Yukihira Restaurant</title>
   </head>
   <body>
+    <nav>
+      <div class="logo-website">
+        <img src="images/yukihira-logo.png" width="100px" alt="website logo" />
+      </div>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Menu</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Rate Us</a></li>
+      </ul>
+    </nav>
+
     <!-- <embed
       src="music/03.Onnaji Kimochi. (TV Size).mp3"
       loop="infinite"
       autostart="true"
+      hidden
     />
     <marquee behavior="scroll" direction="left" scrollamount="15"
       >Eat Now to Get 50% Discount!</marquee
