--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <li><a href="">About</a></li>
         <li><a href="">Rate Us</a></li>
       </ul>
+      <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
 
     <!-- <embed
