created hamburger menu animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="">Rate Us</a></li>
       </ul>
       <div class="hamburger-menu">
+        <input type="checkbox" />
         <span></span>
         <span></span>
         <span></span>
