created animated hamburger btn function that can be slide from top to bottom

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo-website">
         <img src="images/yukihira-logo.png" width="100px" alt="website logo" />
       </div>
-      <ul>
+      <ul class="top-slider">
         <li><a href="">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About</a></li>
@@ -35,5 +35,7 @@
     <marquee behavior="scroll" direction="left" scrollamount="15"
       >Eat Now to Get 50% Discount!</marquee
     > -->
+
+    <script src="script.js"></script>
   </body>
 </html>
