fix javascript toggle hamburger btn and it's position in mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo-website">
         <img src="images/yukihira-logo.png" width="100px" alt="website logo" />
       </div>
-      <ul class="top-slider">
+      <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About</a></li>
@@ -26,15 +26,36 @@
       </div>
     </nav>
 
+    <section class="scroll-announcement">
+      <marquee behavior="scroll" direction="left" scrollamount="15"
+        >Order Now to Get 50% Discount!</marquee
+      >
+    </section>
+
+    <section id="our-chef" class="our-chef">
+      <div class="container">
+        <div class="chef-description">
+          <h1>Here is Our Chef !</h1>
+          <h3>Yukihira Soma</h3>
+          <p>
+            He is the proud owner of Yukihira Restaurant. He is a 92nd Tōtsuki
+            Generation student and a resident of Polar Star Dormitory. Right
+            now, he serves as 1st seat on Elite Ten Council in Tōtsuki Culinary
+            Academy.
+          </p>
+        </div>
+        <div class="chef-photo">
+          <img src="images/Yukihira Soma.png" alt="Yukihira Soma is Our Chef" />
+        </div>
+      </div>
+    </section>
+
     <!-- <embed
       src="music/03.Onnaji Kimochi. (TV Size).mp3"
       loop="infinite"
       autostart="true"
       hidden
-    />
-    <marquee behavior="scroll" direction="left" scrollamount="15"
-      >Eat Now to Get 50% Discount!</marquee
-    > -->
+    /> -->
 
     <script src="script.js"></script>
   </body>
