--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Yukihira Restaurant</title>
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav>
       <div class="logo-website">
         <img src="images/yukihira-logo.png" width="100px" alt="website logo" />
@@ -26,12 +27,14 @@
       </div>
     </nav>
 
+    <!-- ANOUNCEMENT -->
     <section class="scroll-announcement">
       <marquee behavior="scroll" direction="left" scrollamount="15"
         >Order Now to Get 50% Discount!</marquee
       >
     </section>
 
+    <!-- OUR CHEF -->
     <section id="our-chef" class="our-chef">
       <div class="container">
         <div class="chef-description">
@@ -49,6 +52,13 @@
         </div>
       </div>
     </section>
+
+    <!-- MENU -->
+    <!-- <section class="menu">
+      <div class="row">
+        <h1>Our Menu</h1>
+      </div>
+    </section> -->
 
     <!-- <embed
       src="music/03.Onnaji Kimochi. (TV Size).mp3"
