applying grid on image menu

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <img src="images/yukihira-logo.png" width="100px" alt="website logo" />
       </div>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Menu</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Rate Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#rate-us">Rate Us</a></li>
       </ul>
       <div class="hamburger-menu">
         <input type="checkbox" />
@@ -54,11 +53,43 @@
     </section>
 
     <!-- MENU -->
-    <!-- <section class="menu">
-      <div class="row">
+    <section id="menu" class="menu">
+      <div class="container">
         <h1>Our Menu</h1>
+        <p>
+          We serve the best food, made with the best quality ingredients. <br />
+          Download our menu by clicking the button below.
+        </p>
+        <div class="btn-menu">
+          <a href="#" download="Yukihira Restaurant Menu">Download Our Menu</a>
+        </div>
+        <div class="menu-list">
+          <div>
+            <img
+              src="images/menu/chaliapin-steak-don.png"
+              alt="Menu 1: Chaliapin Steak Don"
+            />
+            <figcaption>Chaliapin Steak Don</figcaption>
+          </div>
+
+          <div>
+            <img
+              src="images/menu/char-okakiage .png"
+              alt="Menu 2: Char Okakiage"
+            />
+            <figcaption>Char Okakiage</figcaption>
+          </div>
+
+          <div>
+            <img
+              src="images/menu/furikake-gohan.png"
+              alt="Menu 3: Furikake Gohan"
+            />
+            <figcaption>Furikake Gohan</figcaption>
+          </div>
+        </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <embed
       src="music/03.Onnaji Kimochi. (TV Size).mp3"
