applying 50% discount changing color animation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- ANOUNCEMENT -->
     <section class="scroll-announcement">
       <marquee behavior="scroll" direction="left" scrollamount="15"
-        >Order Now to Get 50% Discount!</marquee
+        >Order Now to Get <span>50% Discount</span> !</marquee
       >
     </section>
 
